# midi2osc2

./: .gitignore  .gitmodules  CMakeLists.txt  Toolchain-pi-zero.cmake  akai_midimix.profile  compile  compilePiZero  iwyu  main.cpp  mappings.cpp  mappings.hpp  midi.cpp  midi.hpp  midi2osc2.conf  oiccu1.mapping  oiccu2.mapping  osc.cpp  osc.hpp  output.hpp  test.mapping  test2.mapping  test_midi.cpp  test_osc.cpp  tidy
debian/: changelog  control  copyright  install
docs/: about.xhtml  app.css  app.js  common.js  config.js  index.xhtml  intro.xhtml  navbar.xhtml  remap.xhtml
src/: CMakeLists.txt  config.cpp  config.hpp  gui.cpp  gui.hpp  main.cpp  mappings.cpp  mappings.hpp  midi.cpp  midi.hpp  midi_console.cpp  midi_core.hpp  osc.cpp  osc.hpp  output.hpp  utils.hpp
web/: about.xhtml  app.css  app.js  bootstrap-toc.min.css  common.css  common.js  configFiles.xhtml  docs.xhtml  index.html  navbar.xhtml  remap.xhtml
